adds previously forgotten changes

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     
     <link rel="stylesheet" href="2.1.0-dev/en/_static/basic.css" type="text/css" />
     <link rel="stylesheet" href="2.1.0-dev/en/_static/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="2.1.0-dev/en/_static/bootstrap-3.3.6/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="2.1.0-dev/en/_static/bootstrap-3.3.6/css/bootstrap-theme.min.css" type="text/css" />
+    <link rel="stylesheet" href="2.1.0-dev/en/_static/bootstrap-3.1.0/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="2.1.0-dev/en/_static/bootstrap-3.1.0/css/bootstrap-theme.min.css" type="text/css" />
     <link rel="stylesheet" href="2.1.0-dev/en/_static/bootstrap-sphinx.css" type="text/css" />
-    
+    <link rel="stylesheet" href="2.1.0-dev/en/_static/custom.css" type="text/css" />
+
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    './',
@@ -27,7 +28,7 @@
     <script type="text/javascript" src="2.1.0-dev/en/_static/doctools.js"></script>
     <script type="text/javascript" src="2.1.0-dev/en/_static/js/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="2.1.0-dev/en/_static/js/jquery-fix.js"></script>
-    <script type="text/javascript" src="2.1.0-dev/en/_static/bootstrap-3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="2.1.0-dev/en/_static/bootstrap-3.1.0/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="2.1.0-dev/en/_static/bootstrap-sphinx.js"></script>
     <link rel="shortcut icon" href="2.1.0-dev/en/_static/favicon.ico"/>
     <link rel="top" title="Workshop - FOSS4G routing with pgRouting" href="#" />
