fixing an equal sign

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
              <li>pgRouting related requisites:</li>
              <ul>
                  <li> pgRouting 2.3 or pgRouting 2.4 </li>
-                 <li> osm2pgrouting >= 2.2 </li>
+                 <li> osm2pgrouting 2.2 </li>
                  <li> OSGeo Live 11.0 </li>
              </ul>
          </ul>
