fix 404 logo link

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 div.background {
-  background: url(drawing.png) repeat;
+  background: url('http://pgrouting.org/drawing.png) repeat;
   border: 2px solid black;
 
 }
@@ -28,7 +28,7 @@ div.transbox p {
 <div class="background">
   <div class="transbox">
 <ul>
-   <p align ="middle"><img src='logo.png' align="middle"></p>
+   <p align ="middle"><img src='http://pgrouting.org/logo.png' align="middle"></p>
 <center>
 <h2><span class="error404">404</span> <br> Error, the page was not found :( </h2>
 			</center>
