fix 404 logo link

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 div.background {
-  background: url('http://workshop.pgrouting.org/drawing.png) repeat;
+  background: url('http://workshop.pgrouting.org/drawing.png') repeat;
   border: 2px solid black;
 
 }
