fix 404 logo link

--- a/404.html
+++ b/404.html
@@ -30,11 +30,9 @@ div.transbox p {
 <ul>
    <p align ="middle"><img src='http://workshop.pgrouting.org/logo.png' align="middle"></p>
 <center>
-<h2><span class="error404">404</span> <br> Error, the page was not found :( </h2>
-			</center>
+<h2><span class="error404">404</span> <br> Error, the page was not found</h2>
     <p1>Sorry, but the page you were looking for cannot be found.</p1>
     <p1>To find the page you were looking for you might want to go:</p1>
-<center>
     <li><p2><a href="http://pgrouting.org/search.html">Search Page</a></p2></li>
 
     <li><p2><a href="http://pgrouting.org/index.html#home">pgRouting Home</a></p2></li>
